Updated readme with changelog